--- a/model_analysis_v4.rmd
+++ b/model_analysis_v4.rmd
@@ -56,7 +56,7 @@ rm(list = ls())
 library(MASS)
 library(ggpubr)
 library(matlab)
-
+library(broom)
 library(ggplot2)
 
 library(tidyr)
@@ -784,39 +784,7 @@ There are five outcome measures of interest in the RLWM task: accuracy at the en
              aes( as.factor(iteration), accuracy, color=setSize, group=setSize)) 
 ```
 
-```{r stats for differneces in RLWM task for the 4 groups}
-#---- measures for RLWM:  T THESE SHOULD BE EDITED TO SHOW BOTH MODEL AND BEHAVIORAL DATA
 
- #------Learning accuracy (12th iteration, done)
- #  melted.p.behav.model %>% 
- #  filter(iteration==12) %>% #Grab only the 12th iteration
- #  summarySE( measurevar = "accuracy", groupvars = c( "model","cond.model")) %>% 
- #   ggplot(aes(x=model,weight=accuracy,ymin=accuracy-se, ymax=accuracy+se, group=cond.model,  color=cond.model)) +
- #  #geom_jitter(height = 0, width = 0.1) +
- # #geom_bar(position =position_dodge(), aes(y=accuracy), stat = 'identity')+
- #  geom_errorbar(position=position_dodge(width = 0.75), width=.55, size=2) +
- #  geom_point(position =position_dodge(width = 0.75), aes(y=accuracy, color=cond.model), size=4) +
- #   scale_color_brewer(palette = "Paired") +
- #  ylim(c(0.25,1))+
- # # xlab('stimulus iteration') +
- # theme_pubr(base_size = 24)  
- #  # facet_wrap(vars(model)) 
-
- #------Test accuracy
-# melted.p.behav.model %>% 
-#    filter(iteration == c(13)) %>% 
-#   summarySE( measurevar = "accuracy", groupvars = c("iteration", "condition", "cond.model", "model")) %>%# View()
-#   ggplot(aes(x=model,weight=accuracy,ymin=accuracy-se, ymax=accuracy+se, group=cond.model,  color=cond.model)) +
-#   #geom_jitter(height = 0, width = 0.1) +
-#  #geom_bar(position =position_dodge(), aes(y=accuracy), stat = 'identity')+
-#   geom_errorbar(position=position_dodge(width = 0.75), width=.55, size=2) +
-#   geom_point(position =position_dodge(width = 0.75), aes(y=accuracy, color=cond.model), size=4) +
-#    scale_color_brewer(palette = "Paired") +
-#   ylim(c(0.25,1))+
-#  # xlab('stimulus iteration') +
-#  theme_pubr(base_size = 24, legend = 'none')  
-#   # facet_wrap(vars(model)) 
-```
 
 ```{r Learning and test combined plot, fig.width=12, fig.height=12,fig.cap="figure 6"}
 #------Learning and test combined
@@ -1081,26 +1049,43 @@ param.spread <-
   tally() 
   
   param.spread %>% 
+    ungroup() %>% 
     filter(!is.na(unscaled.vals)) %>% 
   ggplot(aes(x=value, variable,size=n, color=variable)) +
   geom_point(alpha=.35)+
 #  facet_wrap(vars(model)) +
-  #geom_text(aes(label=round(unscaled.vals,2), size=2,color='blue'), check_overlap = T)+
+  geom_text(aes(label=round(unscaled.vals,2), size=2,color='blue'), check_overlap = T)+
+     geom_text(aes(label=n, size=2,color='red'), check_overlap = T, nudge_y = .3)+
    theme_classic2(base_size = 24)+
     theme(legend.position = 'top')+
     scale_size(range = c(1, 30), name='count', breaks = c(5,10,15,20)) +
    # theme(legend.position='top') +
     ylab('parameter')+
     xlab('scaled value')
-    
   
+library(ggridges)
+  
+  param.spread %>% 
+    ungroup() %>% 
+    filter(!is.na(unscaled.vals)) %>% 
+  ggplot(aes(x=value, variable,size=n, fill=variable)) +
+    geom_density_ridges(stat = 'binline', bins=20)
 
+   param.spread %>% 
+     ungroup() %>% 
+    filter(!is.na(unscaled.vals)) %>% 
+  ggplot(aes(x=variable, value,size=n, fill=variable))+
+     geom_boxplot()
   
-  # param.spread %>% 
-  #   dplyr::group_by(model,variable) %>% 
-  #   dplyr::summarise(mean=mean(unscaled.vals, na.rm = T), 
-  #                    median=median(unscaled.vals, na.rm=T))
-  #   
+  param.spread %>%
+    ungroup() %>% 
+    dplyr::group_by(variable) %>%
+    filter(!is.na(value)) %>%  
+    dplyr::summarise(mean=mean(unscaled.vals, na.rm = T),
+                     median=median(unscaled.vals, na.rm=T),
+                     mean_c=mean(n, na.rm = T),
+                     median_c=median(n, na.rm = T))
+
 ```
 
 ### Individual parameter effects on outcomes
@@ -1108,7 +1093,8 @@ param.spread <-
 temp4join1 <- 
   fit.lr %>% 
   dplyr::filter(estimate.type=='slope') %>% 
-  reshape2::dcast(subjects  + model ~ setSize + estimate.type + type, value.var = 'estimate')
+  reshape2::dcast(subjects  + model ~ setSize + estimate.type + type, value.var = 'estimate') %>% 
+  scale()
 
 temp4join2 <- 
   learnTestDiff %>% 
@@ -1261,6 +1247,19 @@ molt.param.out %>%
      
 ```
 
+```{r parameter influence on outcomes large lm}
+p.param.outcomes %>% 
+  filter(model=='LTM', subjects!=15012 & subjects!=6207 & subjects!=28307) %>% 
+  lm( s3.13.behav ~ bll+ ans +imag,data=.) %>% 
+  summary()
+  
+
+
+
+```
+
+
+
 
 ### Combined effect of parameters on outcomes
 
@@ -1320,7 +1319,6 @@ ggplot(aes(bias,learnDiff)) +
 
 
 ```
-
 If that is the case, is the inclusion of the RL component a vital part of their learning make-up, however small it is? This plot shows what this group would have looked like if they relied only on LTM. 
 
 ```{r}
@@ -1331,7 +1329,7 @@ If that is the case, is the inclusion of the RL component a vital part of their 
 
 ```
 
-How about some K-means clustering? 
+### How about some K-means clustering? 
 
 ```{r kmeans on parameter values}
 param.cluster <-
